--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+<!doctype html>
+<html>
+	<head>
+		<title>"Adam Wood's Website"</title>
+	</head>
+	<body>
+		"Hello, thank you for visiting my website. I am Adam, I am a Computer Science Major
+  and would like to go into Cyber Security when I'm older. I am a freshman and live on South Campus.
+ I used to play baseball and like being outside. Aside from Computer Science I have an interest in
+ exotic cars and the stock market.
+</body>
+</html>
+
+
+
