--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>"Adam Wood's Website"</title>
+		<title> Adam Wood's Website </title>
 	</head>
 	<body>
 		"Hello, thank you for visiting my website. I am Adam, I am a Computer Science Major
