--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	</head>
 
 	<body>
-		Hello, thank you for visiting my website. I am Adam, I am a Computer Science Major
+	<h1> Welcome to my page! </h1>
+
+	Hello, thank you for visiting my website. I am Adam, I am a Computer Science Major
   and would like to go into Cyber Security when I'm older. I am a freshman and live on South Campus.
  I used to play baseball and like being outside. Aside from Computer Science I have an interest in
  exotic cars and the stock market.
