--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 	Hello, thank you for visiting my website. I am Adam, I am a Computer Science Major
   and would like to go into Cyber Security when I'm older. I am a freshman and live on South Campus.
 
-
- I like boating, fourwheeling, and baseball. Aside from Computer Science I have an interest in
- exotic cars and the stock market.
+<u1>
+	<li> Boating </li>
+	<li> Cars </li>
+	<li> Stocks </li>
+	<li> Money </li>
 </body>
 </html>
 
