--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<h1> Welcome to my page! </h1>
 
 	Hello, thank you for visiting my website. I am Adam, I am a Computer Science Major
-  and would like to go into Cyber Security when I'm older. I am a freshman and live on South Campus.
-
+  and would like to go into Cyber Security when I'm older. I am a freshman and live on South Campus. 
+Some of my interests include:
 <u1>
 	<li> Boating </li>
 	<li> Cars </li>
