--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!doctype html>
 <html>
+
+p {
+	color: green;
+	font-size: 20px;
+	text-align: center;
+
 	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<title> Adam Wood's Website </title>
 	</head>
 
@@ -8,7 +15,7 @@
 	<h1> Welcome to my page! </h1>
 
 	Hello, thank you for visiting my website. I am Adam, I am a Computer Science Major
-  and would like to go into Cyber Security when I'm older. I am a freshman and live on South Campus. 
+  and would like to go into Cyber Security when I'm older. I am a freshman and live on South Campus.
 Some of my interests include:
 <u1>
 	<li> Boating </li>
@@ -18,6 +25,4 @@ Some of my interests include:
 </u1>
 </body>
 </html>
-
-
-
+}
