--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 	</head>
 
 	<body>
-	<h1> Welcome to my page! </h1>
+	<h1> Adam Wood </h1>
 
 <p>	Hello, thank you for visiting my website. I am Adam, I am a Computer Science Major
   and would like to go into Cyber Security when I'm older. I am a freshman and live on South Campus.
-Some of my interests include:
 </p>
+<p2>
+	Some of my interests include:
+</p2>
+
 <u1>
 	<li> Boating </li>
 	<li> Cars </li>
