Add existing file

--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 
 	<head>
-
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<title> Adam Wood's Website </title>
-	</head>
+	
 
 	<body>
 	<h1> Adam Wood </h1>
