--- a/index.html
+++ b/index.html
@@ -1,25 +1,40 @@
 <!doctype html>
 <html lang="en">
+<head>
+<meta charset="utf-8">
+		<meta name ="keywords" content ="website, github, web development, html,
+ javascript, html, css">
+		<meta name="author" content="Adam Wood">
+		<title> Adam Wood's Website</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylsheet" media="(max-width: 800px)" href="example.css">	
+<link href="https://fonts.googleapis.com/css?family=Inonsolata"rel='stylesheet' type='text/css'>
+<link href ='CSS/styl.css' rel='stylsheet' type='text/css'>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs.snap.svg/0.3.0/snap.svg-min.js"></script>
+<script src="JS/main.js"></script>
+<link rel-"stylesheet"
+href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script
+src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+</script>
+</head>
+<body>
+	<div id="intro">
+		<div id="intro-start">
+			<h1 id = "title-header" class="index-titles">Adam<span stle="font-weight:400;">Wood</span></h1>
+		<div id= "subtitles">
+			<h1 class = "index-titles a">CSE Student</h1>
+			<h1 class = "index-titles a">Aspiring Computer Scientist</h1>
+		</div>
+	</div>
 
-
-	<head>
-
-
-	<body>
-	<h1> Adam Wood </h1>
-
-<p>	Hello, thank you for visiting my website. I am Adam, I am a Computer Science Major
+<p>	Hello, thank you for visiting my website. I am a Computer Science Major
   and would like to go into Cyber Security when I'm older. I am a freshman and live on South Campus.
 </p>
 <p2>
 	Some of my interests include:
 </p2>
 
-<u1>
-	<li> Boating </li>
-	<li> Cars </li>
-	<li> Stocks </li>
-	<li> Money </li>
-</u1>
 </body>
 </html>
