--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="author" content="Adam Wood">
 		<title> Adam Wood's Website</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylsheet" media="(max-width: 800px)" href="example.css">	
+		<link rel="stylsheet" media="(max-width: 800px)" href="style.css">	
 <link href="https://fonts.googleapis.com/css?family=Inonsolata"rel='stylesheet' type='text/css'>
 <link href ='CSS/styl.css' rel='stylsheet' type='text/css'>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
