--- a/index.html
+++ b/index.html
@@ -20,20 +20,12 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 </script>
 </head>
 <body>
-	<div id="intro">
-		<div id="intro-start">
-			<h1 id = "title-header" class="index-titles">Adam<span stle="font-weight:400;">Wood</span></h1>
-		<div id= "subtitles">
-			<h1 class = "index-titles a">CSE Student</h1>
-		</div>
+	<div class="intro">
+			<h1>Adam Wood</h1>
+			<p> Computer Science Student at <a href ="www.buffalo.edu" target="_blank"> Buffalo </a> </p>
 	</div>
 
-<p>	Hello, thank you for visiting my website. I am a Computer Science Major
-  and would like to go into Cyber Security when I'm older. I am a freshman and live on South Campus.
-</p>
-<p2>
-	Some of my interests include:
-</p2>
+
 
 </body>
 </html>
