--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 <body>
 	<div class="intro">
 			<h1>Adam Wood</h1>
-			<p> Computer Science Student at <a href ="www.buffalo.edu" target="_blank"> Buffalo </a> </p>
+			<p> Computer Science Student at <a href ="https://www.buffalo.edu" target="_blank"> Buffalo </a> </p>
 	</div>
 
 
