--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name ="keywords" content ="website, github, web development, html,
  javascript, html, css">
 		<meta name="author" content="Adam Wood">
-		<title> Adam Wood's Website</title>
+		<title> Adam Wood</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylsheet" media="(max-width: 800px)" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Inonsolata"rel='stylesheet' type='text/css'>
@@ -20,12 +20,27 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 </script>
 </head>
 <body>
-	<div class="intro">
+
 			<h1>Adam Wood</h1>
 			<p> Computer Science Student at <a href ="https://www.buffalo.edu" target="_blank"> Buffalo </a> </p>
-	</div>
+
 
 
 
 </body>
 </html>
+<style>
+body{
+	background-size: auto;
+}
+h1{
+	font-family: cursive;
+	text-align: center;
+	font-size: 60px;
+}
+p{
+	font-family: sans-serif;
+	text-align: center;
+	font-size: 30px;
+}
+</style>
