--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 <style>
 body{
 	background-size: auto;
-	background-image: url("http://i.giphy.com/gifs/l41YcgNSPj6Wy1KyQ.gif");
+	background-image: url("http://giphy.com/gifs/26glAFwg6xhrunlbu/html5");
 }
 h1{
 	font-family: cursive;
