--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8">
 		<meta name ="keywords" content ="website, github, web development, html,
  javascript, html, css">
+ <script type="text/javascript" src="http://giphy.com/gifs/26glAFwg6xhrunlbu/html5">
+ </script>
 		<meta name="author" content="Adam Wood">
 		<title> Adam Wood</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
