--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="author" content="Adam Wood">
 		<title> Adam Wood</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylsheet" media="(max-width: 800px)" href="style.css">
+		<link rel="stylsheet" type="text/css" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Inonsolata"rel='stylesheet' type='text/css'>
 <link href ='CSS/styl.css' rel='stylsheet' type='text/css'>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -31,19 +31,3 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 
 </body>
 </html>
-<style>
-body{
-	background-size: auto;
-	background-image: url("http://giphy.com/gifs/26glAFwg6xhrunlbu/html5");
-}
-h1{
-	font-family: cursive;
-	text-align: center;
-	font-size: 60px;
-}
-p{
-	font-family: sans-serif;
-	text-align: center;
-	font-size: 30px;
-}
-</style>
