--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ body{
 	background-image: url("http://giphy.com/gifs/26gJAFwg6xhrunlbu/html5");
 }
 h1{
-	font-family: cursive;
+	font-family: fantasy;
 	text-align: center;
 	font-size: 60px;
 }
