--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 <style>
 body{
 	background-size: auto;
-	background-image: url("http://giphy.com/gifs/26gJAFwg6xhrunlbu/html5");
+	background-image: url("http://giphy.com/gifs/26gJAFwg6xhrunIbu/html5");
+
 }
 h1{
-	font-family: fantasy;
+	font-family: cursive;
 	text-align: center;
 	font-size: 60px;
 }
