--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 <style>
 body{
 	background-size: auto;
-	background-image: url("giphy.com/gifs/26gJAFwg6xhrunIbu/html5");
+	background-image: url("https://giphy.com/gifs/26gJAFwg6xhrunIbu/html5");
 
 }
 h1{
