--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 body{
 	background-size: auto;
 	background-image: url("https://giphy.com/gifs/26gJAFwg6xhrunIbu/html5");
+	background-size: 2000px;
 
 }
 h1{
