--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 			<p> Computer Science Student at <a href ="https://www.buffalo.edu" target="_blank"> Buffalo </a> </p>
 
 
-
+			<div class="row">
+				<a href="about.html" target="_blank"> <button type="button" class="btn btn-info"
+					style="color: grey">About me</button></a>
+					<a href="resume.html" target="_blank"> <button type="button" class="btn btn-info"
+						style="color: grey">Resume</button></a>
+						<a href="contact.html" target="_blank"> <button type="button" class="btn btn-info"
+							style="color: grey">Contact</button></a>
 
 
 <style>
