--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 <style>
 body{
 	background-size: auto;
-	background-image: url("https://giphy.com/gifs/26gJAFwg6xhrunIbu/html5");
+	background-image: url("http://giphy.com/gifs/3o7TKBf6kpLJaZNDna/html5");
 	background-size: 2000px;
 
 }
