--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script
 src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 </script>
+<iframe src="//giphy.com/embed/3o7TKBf6kpLJaZNDna?html5=true&playOnHover=true"width="480"height="250"frameborder="0"class="giphy-embed"allowfullscreeen=""></iframe>
 <body>
 
 			<h1>Adam Wood</h1>
@@ -36,7 +37,6 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 <style>
 body{
 	background-size: auto;
-	background-image: url("http://giphy.com/gifs/3o7TKBf6kpLJaZNDna/html5");
 	background-size: 2000px;
 
 }
