--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 </body>
 <style>
 body{
-	background-size: auto;
-	background-size: 2000px;
-  background-image: url("http://giphy.com/gifs/3o7TKBf6kpLJaZNDna/html5");
-
+  background-image: url("https://media.giphy.com/media/26gJAFwg6xhrunIbu/source.gif");
+	background-size: cover;
 }
 h1{
 	font-family: cursive;
