--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 </body>
 <style>
 body{
-  background-image: url("https://media.giphy.com/media/26gJAFwg6xhrunIbu/source.gif");
+  background-image: url("http://giphy.com/gif/26gJAFwg6xhrunIbu/html5");
 	background-size: cover;
 }
 h1{
