--- a/index.html
+++ b/index.html
@@ -25,12 +25,35 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 
 
 			<div class="row">
-				<a href="about.html" target="_blank"> <button type="button" class="btn btn-info"
+				<a href="window.scrollTo(0,500);" target="_blank"> <button type="button" class="btn btn-info"
 					style="color: grey">About me</button></a>
 					<a href="resume.html" target="_blank"> <button type="button" class="btn btn-info"
 						style="color: grey">Resume</button></a>
 						<a href="contact.html" target="_blank"> <button type="button" class="btn btn-info"
 							style="color: grey">Contact</button></a>
+
+
+							<p1> I'm a freshman at the University at Buffalo looking to get my degree in Computer Science.
+							  I aspire to get an advanced degree in Cyber Security before starting my career in the field.
+							  People usually describe me as an attentive, conscientious, and hard working student who is
+							  reliable and dedicated. In addition, I am interested in the stock market and investing in real
+							  estate on my free time. I'm a freshman at the University at Buffalo looking to get my degree in Computer Science.
+								  I aspire to get an advanced degree in Cyber Security before starting my career in the field.
+								  People usually describe me as an attentive, conscientious, and hard working student who is
+								  reliable and dedicated. In addition, I am interested in the stock market and investing in real
+								  estate on my free time. I'm a freshman at the University at Buffalo looking to get my degree in Computer Science.
+									  I aspire to get an advanced degree in Cyber Security before starting my career in the field.
+									  People usually describe me as an attentive, conscientious, and hard working student who is
+									  reliable and dedicated. In addition, I am interested in the stock market and investing in real
+									  estate on my free time. I'm a freshman at the University at Buffalo looking to get my degree in Computer Science.
+										  I aspire to get an advanced degree in Cyber Security before starting my career in the field.
+										  People usually describe me as an attentive, conscientious, and hard working student who is
+										  reliable and dedicated. In addition, I am interested in the stock market and investing in real
+										  estate on my free time. I'm a freshman at the University at Buffalo looking to get my degree in Computer Science.
+											  I aspire to get an advanced degree in Cyber Security before starting my career in the field.
+											  People usually describe me as an attentive, conscientious, and hard working student who is
+											  reliable and dedicated. In addition, I am interested in the stock market and investing in real
+											  estate on my free time. </p1>
 
 </body>
 <style>
@@ -41,16 +64,20 @@ body{
 h1{
 	font-family: cursive;
 	text-align: center;
-	font-size: 60px;
+	font-size: 100px;
 }
 p{
 	font-family: sans-serif;
 	text-align: center;
-	font-size: 30px;
+	font-size: 60px;
 }
 .row{
 	text-align: center;
-	font-size: 25px;
+	font-size: 40px;
+}
+p1{
+	text-align: center;
+	font-size: 30px;
 }
 </style>
 </head>
