--- a/index.html
+++ b/index.html
@@ -30,30 +30,14 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 					<a href="resume.html" target="_blank"> <button type="button" class="btn btn-info"
 						style="color: grey">Resume</button></a>
 						<a href="contact.html" target="_blank"> <button type="button" class="btn btn-info"
-							style="color: grey">Contact</button></a>
+							style="color: grey">Contact</button></a></div>
 
 
 							<p1> I'm a freshman at the University at Buffalo looking to get my degree in Computer Science.
 							  I aspire to get an advanced degree in Cyber Security before starting my career in the field.
 							  People usually describe me as an attentive, conscientious, and hard working student who is
 							  reliable and dedicated. In addition, I am interested in the stock market and investing in real
-							  estate on my free time. I'm a freshman at the University at Buffalo looking to get my degree in Computer Science.
-								  I aspire to get an advanced degree in Cyber Security before starting my career in the field.
-								  People usually describe me as an attentive, conscientious, and hard working student who is
-								  reliable and dedicated. In addition, I am interested in the stock market and investing in real
-								  estate on my free time. I'm a freshman at the University at Buffalo looking to get my degree in Computer Science.
-									  I aspire to get an advanced degree in Cyber Security before starting my career in the field.
-									  People usually describe me as an attentive, conscientious, and hard working student who is
-									  reliable and dedicated. In addition, I am interested in the stock market and investing in real
-									  estate on my free time. I'm a freshman at the University at Buffalo looking to get my degree in Computer Science.
-										  I aspire to get an advanced degree in Cyber Security before starting my career in the field.
-										  People usually describe me as an attentive, conscientious, and hard working student who is
-										  reliable and dedicated. In addition, I am interested in the stock market and investing in real
-										  estate on my free time. I'm a freshman at the University at Buffalo looking to get my degree in Computer Science.
-											  I aspire to get an advanced degree in Cyber Security before starting my career in the field.
-											  People usually describe me as an attentive, conscientious, and hard working student who is
-											  reliable and dedicated. In addition, I am interested in the stock market and investing in real
-											  estate on my free time. </p1>
+							  estate on my free time. </p1>
 
 </body>
 <style>
