--- a/index.html
+++ b/index.html
@@ -26,16 +26,14 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 
 			<div class="row">
 				<input type="button" onClick="document.getElementById('first').scrollIntoView();" class="btn btn-info"
-					style="color: grey">About me</button></>
+					style="color: grey">About Me</button></>
 					<input type="button" onClick="document.getElementById('second').scrollIntoView();" class="btn btn-info"
 						style="color: grey">Resume</button></>
 						<input type="button" onClick="document.getElementById('third').scrollIntoView();" class="btn btn-info"
 							style="color: grey">Contact</button></></div>
 
-<a href="#first">First</a>
-<a href="#second">Second</a>
-<a href="third">Third</a>
-<div id="first"><a href="first"></a>First</a>
+
+<div id="first"><a href="first"></a>
 							<p1> <h2> About Me </h2>
 								I'm a freshman at the University at Buffalo looking to get my degree in Computer Science.
 							  I aspire to get an advanced degree in Cyber Security before starting my career in the field.
@@ -43,26 +41,34 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 							  reliable and dedicated. In addition, I am interested in the stock market and investing in real
 							  estate on my free time. </p1>
 </div>
-<div id="second"><a href="second"></a>Second</a>
+<div id="second"><a href="second"></a>
 	  <h2> Resume </h2>
 		<h3> Relevant Coursework </h3>
 		<h4> High School </h4>
-		<u1> Design and Drawing for Production B </u1>
-		<u1> Digital Electronics </u1>
-		<u1> Principles of Engineering </u1>
-		<u1> AP: Biology, Calculus, Computer Science </u1>
+		<u1>
+		<li> Design and Drawing for Production B </li>
+		<li> Digital Electronics </li>
+		<li> Principles of Engineering </li>
+		<li> AP: Biology, Calculus, Computer Science </li>
 		<h4> School of Engineering and Applies Sciences at the University at Buffalo</h4>
+	</u1>
+	<u1>
 		<h5> First Semester </h5>
-		<u1> American History (HIS 161) </u1>
-		<u1> Calculus I (MTH 141) </u1>
-		<u1> <a href="https://internet-class.org" target="_blank"> Internet Class: UB Seminar (CSE 199)</a> </u1>
-		<u1> Introduction to Computer Science I (CSE 115) </u1>
+		<li> American History (HIS 161) </li>
+		<li> Calculus I (MTH 141) </li>
+		<li> <a href="https://internet-class.org" target="_blank"> Internet Class: UB Seminar (CSE 199)</a> </li>
+		<li> Introduction to Computer Science I (CSE 115) </li>
+	</u1>
+	<u1>
 		<h5> Second Semester (Upcoming Spring 2017) </h5>
-		<u1> Calculus II (MTH 142) </u1>
-		<u1> Introduction to Computer Science II (CSE 116) </u1>
-		<u1> Introduction to Discrete Structures (CSE 191) </u1>
-		<u1> Digital Systems (CSE 241) </u1>
+		<li> Calculus II (MTH 142) </li>
+		<li> Introduction to Computer Science II (CSE 116) </li>
+		<li> Introduction to Discrete Structures (CSE 191) </li>
+		<li> Digital Systems (CSE 241) </li>
+	</u1>
 	</div>
+	<div id="third"><a href="third"></a>
+		<h2> Contact </h2>
 
 </body>
 <style>
