--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 
 
 			<div class="row">
-				<input type="button" onClick="document.getElementById('first').scrollIntoView();" class="btn btn-info"
+				<input type="button" onClick="document.getElementById('first').scrollIntoView('slow');" class="btn btn-info"
 					style="color: grey">About Me</button></>
-					<input type="button" onClick="document.getElementById('second').scrollIntoView();" class="btn btn-info"
+					<input type="button" onClick="document.getElementById('second').scrollIntoView('slow');" class="btn btn-info"
 						style="color: grey">Resume</button></>
-						<input type="button" onClick="document.getElementById('third').scrollIntoView();" class="btn btn-info"
+						<input type="button" onClick="document.getElementById('third').scrollIntoView('slow');" class="btn btn-info"
 							style="color: grey">Contact</button></></div>
 
 
-<div id="first"><a href="first"></a>
+<div id="first">
 							<p1> <h2> About Me </h2>
 								I'm a freshman at the University at Buffalo looking to get my degree in Computer Science.
 							  I aspire to get an advanced degree in Cyber Security before starting my career in the field.
@@ -41,7 +41,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 							  reliable and dedicated. In addition, I am interested in the stock market and investing in real
 							  estate on my free time. </p1>
 </div>
-<div id="second"><a href="second"></a>
+<div id="second">
 	  <h2> Resume </h2>
 		<h3> Relevant Coursework </h3>
 		<h4> High School </h4>
@@ -67,9 +67,12 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 		<li> Digital Systems (CSE 241) </li>
 	</u1>
 	</div>
-	<div id="third"><a href="third"></a>
+	<div id="third">
 		<h2> Contact </h2>
-
+<p1> Email: agwood2@buffalo.edu </p1>
+<p1> Email: agwood12@gmail.com </p1>
+<p1> <a href="https://github.com/agwood2/" target="_blank"> GitHub Account </a>
+</div>
 </body>
 <style>
 body{
