--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 
 			<div class="row">
 				<input type="button" onClick="document.getElementById('first').scrollIntoView('slow');" class="btn btn-info"
-					style="color: grey">About Me</button></>
+					style="color: grey">About Me</input>
 					<input type="button" onClick="document.getElementById('second').scrollIntoView('slow');" class="btn btn-info"
-						style="color: grey">Resume</button></>
+						style="color: grey">Resume</input>
 						<input type="button" onClick="document.getElementById('third').scrollIntoView('slow');" class="btn btn-info"
-							style="color: grey">Contact</button></></div>
+							style="color: grey">Contact</input></div>
 
 
 <div id="first">
@@ -52,14 +52,14 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 		<li> AP: Biology, Calculus, Computer Science </li>
 		<h4> School of Engineering and Applies Sciences at the University at Buffalo</h4>
 	</u1>
-	<u1>
+	<u1 style="list-style:square;">
 		<h5> First Semester </h5>
 		<li> American History (HIS 161) </li>
 		<li> Calculus I (MTH 141) </li>
 		<li> <a href="https://internet-class.org" target="_blank"> Internet Class: UB Seminar (CSE 199)</a> </li>
 		<li> Introduction to Computer Science I (CSE 115) </li>
 	</u1>
-	<u1>
+	<u1 style="list-style:square;">
 		<h5> Second Semester (Upcoming Spring 2017) </h5>
 		<li> Calculus II (MTH 142) </li>
 		<li> Introduction to Computer Science II (CSE 116) </li>
@@ -69,9 +69,11 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 	</div>
 	<div id="third">
 		<h2> Contact </h2>
-<p1> Email: agwood2@buffalo.edu </p1>
-<p1> Email: agwood12@gmail.com </p1>
-<p1> <a href="https://github.com/agwood2/" target="_blank"> GitHub Account </a>
+		<u1 style="list-style:none;">
+<li> Email: agwood2@buffalo.edu </li>
+<li> Email: agwood12@gmail.com </li>
+<li> <a href="https://github.com/agwood2/" target="_blank"> GitHub Account </a></li>
+	</u1>
 </div>
 </body>
 <style>
