--- a/index.html
+++ b/index.html
@@ -119,6 +119,18 @@ u1{
 	text-align: left;
 	font-size: 30px;
 }
+#first{
+	background:gray;
+	color:blue;
+}
+#second{
+	background:#304269;
+	color:white;
+}
+#third{
+	background:black;
+	color:white;
+}
 </style>
 </head>
 
