--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 
 			<div class="row">
 				<input type="button" onClick="document.getElementById('first').scrollIntoView('slow');" class="btn btn-info"
-					style="color: grey">About Me</input>
-					<input type="button" onClick="document.getElementById('second').scrollIntoView('slow');" class="btn btn-info"
-						style="color: grey">Resume</input>
-						<input type="button" onClick="document.getElementById('third').scrollIntoView('slow');" class="btn btn-info"
-							style="color: grey">Contact</input></div>
+					value="About Me"/>
+				<input type="button" onClick="document.getElementById('second').scrollIntoView('slow');" class="btn btn-info"
+					value="Portfolio"/>
+				<input type="button" onClick="document.getElementById('third').scrollIntoView('slow');" class="btn btn-info"
+					 value="Contact"/>
+				 </div>
 
 
 <div id="first">
