--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 
 
 			<div class="row">
-				<input type="button" onClick="document.getElementById('first').scrollIntoView('slow');" class="btn btn-info"
+				<input type="button" onClick="document.getElementById('first').scrollIntoView({block: "end", behavior: "smooth"});"
 					value="About Me"/>
-				<input type="button" onClick="document.getElementById('second').scrollIntoView('slow');" class="btn btn-info"
+				<input type="button" onClick="document.getElementById('second').scrollIntoView({block: "end", behavior: "smooth"});"
 					value="Portfolio"/>
-				<input type="button" onClick="document.getElementById('third').scrollIntoView('slow');" class="btn btn-info"
+				<input type="button" onClick="document.getElementById('third').scrollIntoView({block: "end", behavior: "smooth"});"
 					 value="Contact"/>
 				 </div>
 
