--- a/index.html
+++ b/index.html
@@ -124,6 +124,19 @@ h5{
 	text-align: left;
 	font-size: 32px;
 }
+nav{
+	white-space:nowrap;
+	width:100%;
+}
+nav li{
+	display:inline-block;
+	list-style: none;
+	margin:auto;
+}
+nav u2{
+	max-width:1000px;
+	margin:auto;
+}
 u1{
 	text-align: left;
 	font-size: 30px;
