--- a/index.html
+++ b/index.html
@@ -143,15 +143,18 @@ u1{
 }
 #about{
 	background:gray;
-	color:blue;
+	color:white;
+	font-weight: lighter;
 }
 #portfolio{
 	background:#304269;
 	color:white;
+	font-weight: lighter;
 }
 #contact{
 	background:black;
 	color:white;
+	text-align: center;
 }
 </style>
 </head>
