--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 
 			<nav>
 				<u2>
-					<li><a data-sectionid="about">About Me</a></li>
+					<li><a data-sectionid="about"></a></li>
 					<li><a data-sectionid="portfolio">Portfolio</a></li>
 					<li><a data-sectionid="contact">Contact</a></li>
 				</u2>
