--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 
 			<nav>
 				<u2>
-					<li1><a data-sectionid="about"></a></li1>
-					<li1><a data-sectionid="portfolio">Portfolio</a></li1>
-					<li1><a data-sectionid="contact">Contact</a></li1>
+					<li class="banner"><a data-sectionid="about">About Me</a></li1>
+					<li class="banner"><a data-sectionid="portfolio">Portfolio</a></li1>
+					<li class="banner"><a data-sectionid="contact">Contact</a></li1>
 				</u2>
 			</nav>
 
@@ -43,8 +43,8 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 
 
 <div id="about">
-		<p1> <h2> About Me </h2>
-				I'm a freshman at the University at Buffalo looking to get my degree in Computer Science.
+	<h2> About Me </h2>
+		<p1>	I'm a freshman at the University at Buffalo looking to get my degree in Computer Science.
 			  I aspire to get an advanced degree in Cyber Security before starting my career in the field.
 			  People usually describe me as an attentive, conscientious, and hard working student who is
 			  reliable and dedicated. In addition, I am interested in the stock market and investing in real
@@ -140,10 +140,10 @@ u2{
 	overflow: hidden;
 	background-color: #333;
 }
-li1{
+#li.banner{
 	float:left;
 }
-li1 a{
+#li.banner a{
 	display:block;
 	color:white;
 	text-align: center;
@@ -151,7 +151,7 @@ li1 a{
 	font-size: 32px;
 	text-decoration: none;
 }
-li1 a:hover{
+#li.banner:hover{
 	background-color: #111;
 	color:red;
 }
