--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@ u2{
 	overflow: hidden;
 	background-color: #333;
 }
-#li.banner{
+#banner{
 	float:left;
 }
-#li.banner a{
+#banner a{
 	display:block;
 	color:white;
 	text-align: center;
@@ -151,7 +151,7 @@ u2{
 	font-size: 32px;
 	text-decoration: none;
 }
-#li.banner:hover{
+#banner:hover{
 	background-color: #111;
 	color:red;
 }
