--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 
 			<nav>
 				<u2>
-					<li class="banner"><a data-sectionid="about">About Me</a></li1>
-					<li class="banner"><a data-sectionid="portfolio">Portfolio</a></li1>
-					<li class="banner"><a data-sectionid="contact">Contact</a></li1>
+					<li id="banner"><a data-sectionid="about">About Me</a></li1>
+					<li id="banner"><a data-sectionid="portfolio">Portfolio</a></li1>
+					<li id="banner"><a data-sectionid="contact">Contact</a></li1>
 				</u2>
 			</nav>
 
