--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ h1{
 	font-family: cursive;
 	text-align: center;
 	font-size: 100px;
+	padding: 200px 0px 150px 0px;
 }
 p{
 	font-family: sans-serif;
