--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 
 			<nav>
 				<u2>
-					<li id="banner"><a data-sectionid="about">About Me</a></li1>
-					<li id="banner"><a data-sectionid="portfolio">Portfolio</a></li1>
-					<li id="banner"><a data-sectionid="contact">Contact</a></li1>
+					<li id="banner"><a data-sectionid="about">About Me</a></li>
+					<li id="banner"><a data-sectionid="portfolio">Portfolio</a></li>
+					<li id="banner"><a data-sectionid="contact">Contact</a></li>
 				</u2>
 			</nav>
 
@@ -143,6 +143,7 @@ u2{
 }
 #banner{
 	float:left;
+	padding: 25px 0px 25px 0px;
 }
 #banner a{
 	display:block;
