--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 					<li id="banner"><a data-sectionid="contact">Contact</a></li>
 				</u2>
 			</nav>
-
+</div>
 				<!--
 			<div class="row">
 				<input type="button" onClick="document.getElementById('first').scrollIntoView('slow');"
@@ -130,6 +130,7 @@ nav{
 	width:100%;
 }
 nav li{
+	background-color: #333;
 	display:inline-block;
 	list-style: none;
 	margin:auto;
@@ -142,7 +143,7 @@ u2{
 	background-color: #333;
 }
 #banner{
-	float:left;
+	background-color: #333;
 	padding: 25px 0px 25px 0px;
 }
 #banner a{
