--- a/index.html
+++ b/index.html
@@ -138,19 +138,19 @@ nav li{
 u2{
 	list-style-type: none;
 	margin: 0;
-	padding: 0;
+	padding: 25px 0px 25px 25px;
 	overflow: hidden;
 	background-color: #333;
 }
 #banner{
 	background-color: #333;
-	padding: 25px 0px 25px 0px;
+//	padding: 25px 0px 25px 0px;
 }
 #banner a{
 	display:block;
 	color:white;
 	text-align: center;
-	padding: 36px 24px;
+//	padding: 36px 24px;
 	font-size: 32px;
 	text-decoration: none;
 }
