--- a/index.html
+++ b/index.html
@@ -138,9 +138,16 @@ nav li{
 u2{
 	list-style-type: none;
 	margin: 0;
-	padding: 25px 0px 25px 25px;
+	padding: 0;
 	overflow: hidden;
 	background-color: #333;
+}
+li a{
+	display:block;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
 }
 #banner{
 	background-color: #333;
