--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 		<h5> First Semester </h5>
 		<li> American History (HIS 161) </li>
 		<li> Calculus I (MTH 141) </li>
-		<li> <a href="https://internet-class.org" target="_blank"> Internet Class: UB Seminar (CSE 199)</a> </li>
+		<li style="text-align:left; list-style:square;"> <a href="https://internet-class.org" target="_blank"> Internet Class: UB Seminar (CSE 199)</a> 
+		</li>
 		<li> Introduction to Computer Science I (CSE 115) </li>
 	</u1>
 	<u1 style="list-style:square;">
