--- a/index.html
+++ b/index.html
@@ -54,36 +54,36 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 	  <h2> Portfolio </h2>
 		<h3> Relevant Coursework </h3>
 		<h4> High School </h4>
-		<u1>
+		<ul>
 		<li> Design and Drawing for Production B </li>
 		<li> Digital Electronics </li>
 		<li> Principles of Engineering </li>
 		<li> AP: Biology, Calculus, Computer Science </li>
 		<h4> School of Engineering and Applies Sciences at the University at Buffalo</h4>
-	</u1>
-	<u1 style="list-style:square;">
+	</ul>
+	<ul style="list-style:square;">
 		<h5> First Semester </h5>
 		<li> American History (HIS 161) </li>
 		<li> Calculus I (MTH 141) </li>
 		<li style="text-align:left; list-style:square;"> <a href="https://internet-class.org" target="_blank"> Internet Class: UB Seminar (CSE 199)</a>
 		</li>
 		<li> Introduction to Computer Science I (CSE 115) </li>
-	</u1>
-	<u1 style="list-style:square;">
+	</ul>
+	<ul style="list-style:square;">
 		<h5> Second Semester (Upcoming Spring 2017) </h5>
 		<li> Calculus II (MTH 142) </li>
 		<li> Introduction to Computer Science II (CSE 116) </li>
 		<li> Introduction to Discrete Structures (CSE 191) </li>
 		<li> Digital Systems (CSE 241) </li>
-	</u1>
+	</ul>
 	</div>
 	<div id="contact">
 		<h2> Contact </h2>
-		<u1 style="list-style:none;">
+		<ul style="list-style:none;">
 <li style="text-align:center;"> Email: agwood2@buffalo.edu </li>
 <li style="text-align:center;"> Email: agwood12@gmail.com </li>
 <li style="text-align:center;"> <a href="https://github.com/agwood2/" target="_blank"> GitHub Account </a></li>
-	</u1>
+	</ul>
 </div>
 </body>
 <style>
@@ -136,7 +136,7 @@ nav li{
 	list-style: none;
 	margin:auto;
 }
-ul{
+nav ul{
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
@@ -166,7 +166,7 @@ li a{
 	background-color: #111;
 	color:red;
 }
-u1{
+ul{
 	text-align: left;
 	font-size: 30px;
 }
