--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@ nav li{
 	margin:auto;
 }
 nav ul{
+	text-align: center;
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
@@ -147,11 +148,12 @@ li a{
 	display:block;
 	color: white;
 	text-align: center;
-	padding: 24px 48px;
+	padding: 48px 72px;
 	text-decoration: none;
 }
 #banner{
 	background-color: #333;
+	text-align: center;
 //	padding: 25px 0px 25px 0px;
 }
 #banner a{
