--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ nav ul{
 	text-align: center;
 	list-style-type: none;
 	margin: 0;
-	padding: 0;
+	padding: 60px 0px 60px 0px;
 	overflow: hidden;
 	background-color: #333;
 }
@@ -148,7 +148,7 @@ li a{
 	display:block;
 	color: white;
 	text-align: center;
-	padding: 48px 128px;
+	padding: 42px 120px;
 	text-decoration: none;
 }
 #banner{
@@ -161,7 +161,7 @@ li a{
 	color:white;
 	text-align: center;
 //	padding: 36px 24px;
-	font-size: 48px;
+	font-size: 36px;
 	text-decoration: none;
 }
 #banner:hover{
