--- a/index.html
+++ b/index.html
@@ -95,12 +95,13 @@ h1{
 	font-family: cursive;
 	text-align: center;
 	font-size: 100px;
-	padding: 200px 0px 50px 0px;
+	padding: 150x 0px 50px 0px;
 }
 p{
 	font-family: sans-serif;
 	text-align: center;
 	font-size: 60px;
+	padding: 50px 0px 40px 0px;
 }
 .row{
 	text-align: center;
