--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 </div>
 </body>
 <style>
-intro{
+#intro{
 	background-color: #304269;
 }
 body{
@@ -179,7 +179,7 @@ ul{
 	font-size: 30px;
 }
 #about{
-	background-color: #4C5364;
+	background-color:#4C5364;
 	color:white;
 	font-weight: lighter;
 	padding: 75px 0px 50px 0px;
@@ -188,7 +188,7 @@ ul{
 	background-color: #ddd;
 	color:white;
 	font-weight: lighter;
-	padding: 50px 0px 50px 20px;
+	padding: 50px 0px 0px 20px;
 }
 #contact{
 	background:black;
