--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ body{
   background-image: url("http://giphy.com/gif/26gJAFwg6xhrunIbu/html5");
 	background-size: cover;
 	font-family: Karla;
+	margin:0;
 }
 h1{
 	font-family: cursive;
