--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 <style>
 #intro{
 	background-color: #304269;
+	color: white;
+	margin-top: 0;
+	margin-bottom: 0;
 }
 body{
   background-image: url("http://giphy.com/gif/26gJAFwg6xhrunIbu/html5");
