--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script
 src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 </script>
+</head>
 <body>
 			<div id="intro">
 			<h1>Adam Wood</h1>
@@ -186,19 +187,19 @@ ul{
 	background-color:#4C5364;
 	color:white;
 	font-weight: lighter;
-	padding: 75px 0px 50px 0px;
+	padding: 55px 0px 50px 0px;
 }
 #portfolio{
 	background-color: #ddd;
 	color:white;
 	font-weight: lighter;
-	padding: 50px 0px 0px 20px;
+	padding: 50px 0px 0px 50px;
 }
 #contact{
 	background:black;
 	color:white;
 	text-align: center;
-	padding: 40px 0px 20px 0px;
+	padding: 30px 0px 10px 0px;
 }
 </style>
 </head>
