--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 <body>
 			<div id="intro">
 			<h1>Adam Wood</h1>
-			<p> Computer Science Student at <a href ="https://www.buffalo.edu" target="_blank"> Buffalo </a> </p>
+			<p> Computer Science Student at Buffalo </p>
 </div>
 			<nav>
 				<ul>
@@ -67,8 +67,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 		<h5> First Semester </h5>
 		<li> American History (HIS 161) </li>
 		<li> Calculus I (MTH 141) </li>
-		<li style="text-align: left; list-style:square;"> <a href="https://internet-class.org" target="_blank"> Internet Class: UB Seminar (CSE 199)</a>
-		</li>
+		<li Internet Class: UB Seminar (CSE 199) </li>
 		<li> Introduction to Computer Science I (CSE 115) </li>
 	</ul>
 	<ul style="list-style:square;">
