--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 #intro{
 	background-color: #304269;
 	color: white;
-	margin-top: 0;
-	margin-bottom: 0;
+	margin-top: 0px;
+	margin-bottom: 0px;
 }
 body{
   background-image: url("http://giphy.com/gif/26gJAFwg6xhrunIbu/html5");
@@ -192,9 +192,10 @@ ul{
 	background-color: #ddd;
 	color:white;
 	font-weight: lighter;
-	padding: 40px 0px 0px 60px;
+	padding: 40px 0px 30px 60px;
 }
 #contact{
+	margin-top: 0px;
 	background:black;
 	color:white;
 	text-align: center;
