--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 	color: white;
 	margin-top: 0px;
 	margin-bottom: 0px;
+	padding-top: 40px;
+	padding-bottom: 40px;
 }
 body{
   background-image: url("http://giphy.com/gif/26gJAFwg6xhrunIbu/html5");
