--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ nav li{
 	margin:auto;
 }
 nav ul{
+	margin-top: 0px;
 	text-align: center;
 	list-style-type: none;
 	margin: 0;
@@ -164,6 +165,7 @@ li a{
 	text-decoration: none;
 }
 #banner{
+	margin-top: 0px;
 	background-color: #333;
 	text-align: center;
 //	padding: 25px 0px 25px 0px;
