--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 
 <div id="about">
 	<h2> About Me </h2>
-		<p1>	I'm a freshman at the University at Buffalo looking to get my degree in Computer Science.
+		<p1 style="padding: 5px 30px 10px 30px; text-align: center;">	I'm a freshman at the University at Buffalo looking to get my degree in Computer Science.
 			  I aspire to get an advanced degree in Cyber Security before starting my career in the field.
 			  People usually describe me as an attentive, conscientious, and hard working student who is
 			  reliable and dedicated. In addition, I am interested in the stock market and investing in real
@@ -94,7 +94,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 	margin-top: 0px;
 	margin-bottom: 0px;
 	padding-top: 20px;
-	padding-bottom: 6px;
+	padding-bottom: 4px;
 }
 body{
   background-image: url("http://giphy.com/gif/26gJAFwg6xhrunIbu/html5");
