--- a/index.html
+++ b/index.html
@@ -25,14 +25,22 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 			<h1>Adam Wood</h1>
 			<p> Computer Science Student at Buffalo </p>
 </div>
-			<nav>
-				<ul>
-					<li id="banner"><a data-sectionid="about">About Me</a></li>
-					<li id="banner"><a data-sectionid="portfolio">Portfolio</a></li>
-					<li id="banner"><a data-sectionid="contact">Contact</a></li>
+			<nav id="navbar">
+				<ul id="fixednav">
+					<li><a href="#">About</a></li>
+					<li><a href="#">Portfolio</a></li>
+					<li><a href="#">Contact</a></li>
 				</ul>
 			</nav>
 </div>
+<!-- <nav id="navbar">
+	<ul id="fixednav">
+		<li id="banner"><a data-sectionid="about">About Me</a></li>
+		<li id="banner"><a data-sectionid="portfolio">Portfolio</a></li>
+		<li id="banner"><a data-sectionid="contact">Contact</a></li>
+	</ul>
+</nav>
+</div> -->
 				<!--
 			<div class="row">
 				<input type="button" onClick="document.getElementById('first').scrollIntoView('slow');"
@@ -140,7 +148,7 @@ h5{
 	text-align: left;
 	font-size: 32px;
 }
-nav{
+/*nav{
 	white-space:nowrap;
 	width:100%;
 }
@@ -183,6 +191,89 @@ li a{
 #banner:hover{
 	background-color: #111;
 	color:red;
+}*/
+/* top navigation */
+#navigation {
+  display: block;
+  height: 35px;
+  background-color: #131313;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#202020), to(#131313));
+  background-image: -webkit-linear-gradient(top, #202020, #131313);
+  background-image: -moz-linear-gradient(top, #202020, #131313);
+  background-image: -ms-linear-gradient(top, #202020, #131313);
+  background-image: -o-linear-gradient(top, #202020, #131313);
+  background-image: linear-gradient(top, #202020, #131313);
+}
+#fixedbar {
+ display: none;
+ position: fixed;
+ top: 0;
+ width: 100%;
+ height: 80px;
+ background: rgba(0,0,0,0.75);
+}
+
+#fixednav {
+ display: block;
+ width: 710px;
+ margin: 0 auto;
+ padding: 0px 25px;
+}
+
+#fixednav li a {
+ display: block;
+ float: left;
+ font-size: 1.75em;
+ font-weight: bold;
+ color: #96aed8;
+ line-height: 80px;
+ text-decoration: none;
+ padding: 0px 8px;
+ margin-right: 6px;
+ -webkit-transition: all 0.2s linear;
+ -moz-transition: all 0.2s linear;
+ transition: all 0.2s linear;
+}
+#fixednav li a:hover {
+ color: #fff;
+ background: rgba(0,0,0,0.3);
+}
+#navigation ul { list-style: none; padding: 0px 7px; }
+
+#navigation ul li { display: inline; float: left; }
+#navigation ul li a {
+  display: block;
+  padding: 0 8px;
+  color: #fff;
+  font-size: 1.1em;
+  text-decoration: none;
+  line-height: 35px;
+  font-weight: bold;
+  margin-right: 6px;
+  text-shadow: 1px 1px 1px #000;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+#navigation ul li a:hover { color: #a8d6e7; }
+html{
+	height: 101%;
+}
+nav{
+	background-color: #333;
+	list-style: none;
+	display:block;
+	margin:0;
+	padding:0;
+	border:0;
+	font-size:100%;
+	font: inherit;
+	vertical-align: baseline;
+	outline:none;
+	-webkit-text-size-adjust: 100%;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing:border-box;
 }
 ul{
 	text-align: left;
