--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 	padding-bottom: 4px;
 }
 body{
-  background-image: url("http://giphy.com/gif/26gJAFwg6xhrunIbu/html5");
-	background-size: cover;
+
 	font-family: Karla;
 	margin:0;
 }
@@ -193,7 +192,7 @@ li a{
 	color:red;
 }*/
 /* top navigation */
-#navigation {
+#nav {
   display: block;
   height: 35px;
   background-color: #131313;
@@ -238,10 +237,10 @@ li a{
  color: #fff;
  background: rgba(0,0,0,0.3);
 }
-#navigation ul { list-style: none; padding: 0px 7px; }
+#nav ul { list-style: none; padding: 0px 7px; }
 
-#navigation ul li { display: inline; float: left; }
-#navigation ul li a {
+#nav ul li { display: inline; float: left; }
+#nav ul li a {
   display: block;
   padding: 0 8px;
   color: #fff;
