--- a/index.html
+++ b/index.html
@@ -27,12 +27,17 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 			<p> Computer Science Student at Buffalo </p>
 </div>
 
-
+	<div id="dropDown">
+			<div></div>
+			<div></div>
+			<div></div>
+		</div>
+<!--
 <ul id="nav">
 	<li><a href="#">About</a></li>
 	<li><a href="#">Portfolio</a></li>
 	<li><a href="#">Contact</a></li>
-</ul>
+</ul> -->
 
 	<!-- <div class="dropdown">
 		<button onclick="myfunction()" class="dropbtn">Navigation</button>
@@ -113,7 +118,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 </div>
 </body>
 <style>
-<title>Responsive 3-Line Menu</title>
+/*<title>Responsive 3-Line Menu</title>
 	<style type="text/css">
 	* {
 		margin: 0;
@@ -151,7 +156,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 		}
 		#nav.js {
 			display: none;
-		
+
 		}
 		ul {
 			width:100%;
@@ -167,7 +172,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 		#menu {
 			display: none;
 		}
-	}
+	}*/
 
 /* Dropdown Button */
 /*.dropbtn {
@@ -180,39 +185,35 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 }
 
 /* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
+/*.dropbtn:hover, .dropbtn:focus {
     background-color: #3e8e41;
 }
 
 /* The container <div> - needed to position the dropdown content */
-.dropdown {
+#dropDown{
 	float:left;
-    position: relative;
-    display: inline-block;
+	width:20px;
+	height:24px;
+	background:linear-gradient(#FFF, #DDD);
+	boarder: #AAA 1px solid;
+	border-radius: 2px;
+	padding: 4px 6px;
+	cursor: pointer;
 }
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #333;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+#dropDown:hover{
+	border: crimson 1px solid;
 }
-
-/* Links inside the dropdown */
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+#dropDown:hover div{
+background:#crimson;
 }
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #333; color:red;}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}*/
+#dropDown > div{
+	width: 20px;
+	height: 4px;
+	background:#333;
+	margin: 3px 0px;
+	border-radius: 4px;
+	transition: background 0.5s linear 0s;
+}
 #intro{
 	background-color: #304269;
 	color: white;
@@ -220,7 +221,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 	margin-bottom: 0px;
 	padding-top: 20px;
 	padding-bottom: 4px;
-} -->
+} -->*/
 body{
 
 	font-family: Karla;
