--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 	border-radius: 2px;
 	padding: 4px 6px;
 	cursor: pointer;
+	transition: border 0.4s lonear 0s;
 }
 #dropDown:hover{
 	border: crimson 1px solid;
